Fix constraints; minor issues.

--- a/nextReleaseProblem.ipynb
+++ b/nextReleaseProblem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 32,
    "id": "0c2689e1-04d0-4f9c-a91d-b104c5b2b2d2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 33,
    "id": "8148a45d-705c-4946-b54d-06af70e7a36b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 34,
    "id": "d83963ef-5553-4d86-bd75-03329bbf41cb",
    "metadata": {},
    "outputs": [],
@@ -34,13 +34,13 @@
     "v = [0] * n # Importância do cliente para a empresa\n",
     "c = [0] * m # Custo de cada requisito\n",
     "L = 5 # Limitação do custo de implementação da empresa\n",
-    "dm = [[0] * m for _ in range(m)] # Matriz de associação de requisitos\n",
-    "cm = [[0] * m for _ in range(n)] # Matriz de associação de clientes"
+    "dm = [[0] * m] * m # Matriz de associação de requisitos\n",
+    "cm = [[0] * m] * m # Matriz de associação de clientes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 35,
    "id": "a2278fb3-ea3e-40ca-88f5-f5dcc5bba51a",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 36,
    "id": "c2a3d506",
    "metadata": {},
    "outputs": [],
@@ -60,12 +60,12 @@
     "# Instâncias (devem ser geradas randomicamente)\n",
     "v = [4, 4, 3, 5, 5]\n",
     "c = [1, 4, 2, 3, 4, 7, 10, 2, 1, 3, 2, 5, 8, 2, 1, 4, 10, 4, 8, 4]\n",
-    "L = 10\n",
+    "L = 50\n",
     "dm = [\n",
     "    [1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # Requisito 1\n",
     "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # Requisito 2\n",
     "    [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # Requisito 3\n",
-    "    [0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # Requisito 4\n",
+    "    [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # Requisito 4\n",
     "    [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # Requisito 5\n",
     "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # Requisito 6\n",
     "    [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],  # Requisito 7\n",
@@ -95,18 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 37,
    "id": "ec20f3bb-eba3-4855-88bb-e721a1102289",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Função Objetivo\n",
-    "model.obj = Objective(expr =  sum(model.y[i] * v[i] for i in range(n)), sense = maximize)"
+    "model.obj = Objective(expr = sum(model.y[i] * v[i] for i in range(n)), sense = maximize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 38,
    "id": "13f14a5e-3a69-411d-a62a-32407e4d7ad5",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 39,
    "id": "9cb1e794-4c0a-4587-a18d-43d566cfd480",
    "metadata": {},
    "outputs": [],
@@ -125,28 +125,29 @@
     "# Restrição de dependência entre requisitos \n",
     "for i in range(m):\n",
     "    for j in range(i + 1, m):\n",
-    "        if i < len(dm) and j < len(dm[i]):\n",
-    "            if dm[i][j] == 1:\n",
-    "                model.add_component(f'reqDependency-{i}-{j}', Constraint(expr=model.x[i] >= model.x[j]))"
+    "        if dm[i][j] == 1:\n",
+    "            # In this case, requirement j depends on requirement i, so x_i >= x_j\n",
+    "            model.add_component(f'reqDependency-{i}-{j}', Constraint(expr=model.x[i] >= model.x[j]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 40,
    "id": "17406578-66fb-435b-a22d-4c1b5bda55d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Restrição para garantir a implementação de todos os requisitos do cliente selecionado\n",
-    "for i in range(m):\n",
-    "    for j in range(i + 1, n):\n",
-    "        if dm[i][j] == 1:\n",
-    "            model.add_component(f'reqClientValidity-{i}-{j}', Constraint(expr=model.x[i] >= model.y[j]))"
+    "for cli in range(n):\n",
+    "    for req in range(m):\n",
+    "        if cm[cli][req] == 1:\n",
+    "            # In this case, requirement \"req\" is associated to client \"cli\", so x_req >= y_cli\n",
+    "            model.add_component(f'reqClientValidity-{cli}-{req}', Constraint(expr=model.x[req] >= model.y[cli]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 41,
    "id": "3780664d-4b05-47e5-8da4-e204f999624a",
    "metadata": {},
    "outputs": [
@@ -162,12 +163,12 @@
       "# ----------------------------------------------------------\n",
       "Problem: \n",
       "- Name: unknown\n",
-      "  Lower bound: 21.0\n",
-      "  Upper bound: 21.0\n",
+      "  Lower bound: 12.0\n",
+      "  Upper bound: 12.0\n",
       "  Number of objectives: 1\n",
-      "  Number of constraints: 5\n",
-      "  Number of variables: 25\n",
-      "  Number of nonzeros: 28\n",
+      "  Number of constraints: 54\n",
+      "  Number of variables: 26\n",
+      "  Number of nonzeros: 125\n",
       "  Sense: maximize\n",
       "# ----------------------------------------------------------\n",
       "#   Solver Information\n",
@@ -180,31 +181,61 @@
       "      Number of bounded subproblems: 1\n",
       "      Number of created subproblems: 1\n",
       "  Error rc: 0\n",
-      "  Time: 0.02166914939880371\n",
+      "  Time: 0.01138615608215332\n",
       "# ----------------------------------------------------------\n",
       "#   Solution Information\n",
       "# ----------------------------------------------------------\n",
       "Solution: \n",
       "- number of solutions: 0\n",
       "  number of solutions displayed: 0\n",
+      "\n",
+      "\n",
+      "Selected clients\n",
       "1.0\n",
+      "0.0\n",
       "1.0\n",
-      "1.0\n",
-      "1.0\n",
+      "0.0\n",
       "1.0\n",
       "\n",
-      "21.0\n"
+      "\n",
+      "Requirements for the next release\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "1.0\n",
+      "0.0\n",
+      "Objective function: 12.0\n"
      ]
     }
    ],
    "source": [
     "# Resolve o modelo\n",
     "solver = SolverFactory('glpk')\n",
-    "results = solver.solve(model, timelimit = 10).write()\n",
+    "results = solver.solve(model, timelimit = 100).write()\n",
+    "print(f'\\n\\nSelected clients')\n",
     "for i in range(n):\n",
     "    print(model.y[i]())\n",
-    "print()\n",
-    "print(model.obj.expr())"
+    "\n",
+    "print(f'\\n\\nRequirements for the next release')\n",
+    "for i in range(m):\n",
+    "    print(model.x[i]())\n",
+    "    \n",
+    "print(f'Objective function: {model.obj.expr()}')"
    ]
   },
   {
@@ -240,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
